--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class = "welcome" id="#section1">
+
+<h2>THE GYM</h2>
 </div>
+
+<div class = "program" id="#section2">
+<h2>PROGRAM</h2>
+</div>
+
+<div class = "schedule" id="#section3">
+<h2>SCHEDULE</h2>
+</div>
+
+<div class = "events" id="#section4">
+<h2>EVENTS</h2>
+</div>
+
+<div class = "about" id="#section5">
+<h2>ABOUT</h2>
+</div>
+
+<div class = "contact" id="#section6">
+<h2>CONTACT</h2>
+</div>
+
