--- a/TheGym/TheGym/wwwroot/css/site.css
+++ b/TheGym/TheGym/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
   font-size: 14px;
+  scroll-behavior: smooth;
 }
 
 @media (min-width: 768px) {
@@ -12,6 +13,11 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+
+:root{
+    --section-margin: 20px;
+}
+
 html {
   position: relative;
   min-height: 100%;
@@ -19,4 +25,52 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+.welcome {
+    height: 700px;
+    background-color: blue;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: var(--section-margin);
+}
+
+.program {
+    height: 700px;
+    background-color: green;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: var(--section-margin);
+}
+
+.schedule {
+    height: 700px;
+    background-color: purple;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: var(--section-margin);
+}
+
+.events {
+    height: 700px;
+    background-color: red;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: var(--section-margin);
+}
+
+.about {
+    height: 700px;
+    background-color: gray;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: var(--section-margin);
+}
+
+.contact {
+    height: 700px;
+    background-color: gold;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: var(--section-margin);
 }
