--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -1,29 +1,47 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "The GYM";
 }
 
-<div class = "welcome" id="#section1">
+<!--Welcome Section-->
+<div class = "welcome" id="section1">
+    <div class="landing-text">
+        <h2>THE GYM</h2>
+        <h3>Transform Your Body, Empower Your Life</h3>
+    </div>
 
-<h2>THE GYM</h2>
 </div>
 
-<div class = "program" id="#section2">
+<div class = "program" id="section2">
 <h2>PROGRAM</h2>
 </div>
 
-<div class = "schedule" id="#section3">
+<div class = "schedule" id="section3">
 <h2>SCHEDULE</h2>
 </div>
 
-<div class = "events" id="#section4">
+<div class = "events" id="section4">
 <h2>EVENTS</h2>
 </div>
 
-<div class = "about" id="#section5">
+<!--Claim Section-->
+<div class = "claims" id="section5">
+
+    <div class="contentWrapper">
+        <div class="content">
+            <h2>Claims</h2>
+            <p>Do you want to get a  claim?</p>
+            <a href="#" class="claim-button">Claim</a>
+        </div>
+    </div>
+
+<div class="imgWrapper">
+    <img src="\images\bg-claim.png" />
+</div>
+
+</div>
+
+
+<!--About Section-->
+<div class = "about" id="section6">
 <h2>ABOUT</h2>
 </div>
-
-<div class = "contact" id="#section6">
-<h2>CONTACT</h2>
-</div>
-
