--- a/TheGym/TheGym/Views/Shared/_Layout.cshtml
+++ b/TheGym/TheGym/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿    @{
-Layout = null;
-}
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,28 +23,31 @@ Layout = null;
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <!-- <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index" href="#section1" >Home</a>-->
+                            <a class="nav-link text-dark" href="#section1" >Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Program">Program</a>
+                            <a class="nav-link text-dark" href="#section2">Program</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Schedule">Schedule</a>
+                            <a class="nav-link text-dark" href="#section3">Schedule</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Events">Events</a>
+                            <a class="nav-link text-dark" href="#section4">Events</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#section5">Claims</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                            <a class="nav-link text-dark" href="#section6">About</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
-                        </li>
+                      
                     </ul>
                 </div>
             </div>
