--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
         <div class="content">
             <h2>Claims</h2>
             <p>Do you want to get a  claim?</p>
-            <a href="#" class="claim-button">Claim</a>
+            <a asp-controller="Claim" asp-action="CreateClaim" class="claim-button">Claim</a>
         </div>
     </div>
 
