--- a/TheGym/TheGym/Views/Shared/_Layout.cshtml
+++ b/TheGym/TheGym/Views/Shared/_Layout.cshtml
@@ -12,22 +12,23 @@
     <link rel="stylesheet" href="~/TheGym.styles.css" asp-append-version="true" />
     
 </head>
-<body class= "bg ">
+<body>
    
 
     <!--BODY-->
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div>
+        <main role="main">
             @RenderBody()
         </main>
     </div>
     
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
+    <!--
+    <footer>
+        <div>
             &copy; 2024 - TheGym - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
