Positioning of the carousel

--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -113,9 +113,9 @@
             <!--The side carousel-->
             <div class="carousel">
                 <div class="images-wrapper">
-                    <img src="./img/image1.png" class="image img-1 show" alt="" />
-                    <img src="./img/image2.png" class="image img-2" alt="" />
-                    <img src="./img/image3.png" class="image img-3" alt="" />
+                    <img src="./images/image1.png" class="image img-1 show" alt="" />
+                    <img src="./images/image2.png" class="image img-2" alt="" />
+                    <img src="./images/image3.png" class="image img-3" alt="" />
                 </div>
 
                 <div class="text-slider">
