--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "The GYM";
+    ViewData["Title"] = "Contractly";
 }
  
 <main class="main">
@@ -121,9 +121,9 @@
                 <div class="text-slider">
                     <div class="text-wrap">
                         <div class="text-group">
-                            <h2>Create your own courses</h2>
-                            <h2>Customize as you like</h2>
-                            <h2>Invite students to your class</h2>
+                            <h2>Create your claim</h2>
+                            <h2>Track Your Claim</h2>
+                            <h2>For the peoplpe and by th people</h2>
                         </div>
                     </div>
 
