--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
                 </form>
 
                 <!--Sign up-->
-                <form action="index.html" autocomplete="off" class="sign-up-form">
+                <form action="Index.cshtml" autocomplete="off" class="sign-up-form">
                     <div class="logo">
                         <img src="./images/C_Logo.png" alt="contractly" />
                         <h4>Contractly</h4>
