The carousel bugs are now fixed

--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -113,8 +113,8 @@
             <!--The side carousel-->
             <div class="carousel">
                 <div class="images-wrapper">
-                    <img src="./images/image1.png" class="image img-1 show" alt="" />
-                    <img src="./images/image2.png" class="image img-2" alt="" />
+                    <img src="./images/image6.png" class="image img-1 show" alt="" />
+                    <img src="./images/image4.png" class="image img-2" alt="" />
                     <img src="./images/image3.png" class="image img-3" alt="" />
                 </div>
 
@@ -123,7 +123,7 @@
                         <div class="text-group">
                             <h2>Create your claim</h2>
                             <h2>Track Your Claim</h2>
-                            <h2>For the peoplpe and by th people</h2>
+                            <h2>For the people</h2>
                         </div>
                     </div>
 
