--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
     <div class="box">
 
-        <div class="inner-box"> <!--to add padding in the parent box-->
+        <div class="inner-box"> <!--to add padding in the parent box.-->
 
             <!--My form wrap-->
             <div class="forms-wrap">
