--- a/TheGym/TheGym/wwwroot/css/site.css
+++ b/TheGym/TheGym/wwwroot/css/site.css
@@ -391,6 +391,7 @@ label {
     justify-content: center;
 }
 
+ /*Bulles having the span */ 
 .bullets span {
    display: block;
    width: 0.5rem;
