--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="forms-wrap">
 
                 <!--Sign in form-->
-                <form method="post" autocomplete="off" class="sign-in-form">
+                <form method="post" asp-controller="User" asp-action="SignIn" autocomplete="off" class="sign-in-form">
 
                     <div class="logo">
                         <img src="./images/C_Logo.png" alt="contractly" />
@@ -56,7 +56,7 @@
                 </form>
 
                 <!--Sign up-->
-                <form method="post" entype="multipart/form-data" autocomplete="off" class="sign-up-form">
+                <form method="post" asp-controller="User" asp-for="SignUp" entype="multipart/form-data" autocomplete="off" class="sign-up-form">
                     <div class="logo">
                         <img src="./images/C_Logo.png" alt="contractly" />
                         <h4>Contractly</h4>
