Can now sign-in using both username and email

--- a/TheGym/TheGym/Views/Home/_SignInPartial.cshtml
+++ b/TheGym/TheGym/Views/Home/_SignInPartial.cshtml
@@ -18,11 +18,11 @@
     <div class="actual-form">
         <div class="input-wrap">
             <input id="name"
-                   asp-for="UserName"
+                   asp-for="Username"
                    class="input-field"
                    autocomplete="off"
                    required />
-            <label for="name">Name</label>
+            <label for="name">Username Or Email</label>
         </div>
 
         <div class="input-wrap">
