--- a/TheGym/TheGym/Views/Home/_SignUpPartial.cshtml
+++ b/TheGym/TheGym/Views/Home/_SignUpPartial.cshtml
@@ -16,7 +16,7 @@
     <div class="actual-form">
         <div class="input-wrap">
             <input id="name"
-                   asp-for="UserName"
+                   asp-for="Username"
                    class="input-field"
                    autocomplete="off"
                    required />
