Background targeted for only the index

--- a/TheGym/TheGym/Views/Home/Index.cshtml
+++ b/TheGym/TheGym/Views/Home/Index.cshtml
@@ -4,11 +4,11 @@
     var signUpModel = new TheGym.Models.SignUp();
 }
  
-<main class="main">
+<main class="main bg-color">
 
     <div class="box">
 
-        <div class="inner-box"> <!--to add padding in the parent box.-->
+        <div class="inner-box" > <!--to add padding in the parent box.-->
 
             <!--My form wrap-->
             <div class="forms-wrap">
