--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -1,9 +1,68 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
     ViewData["Title"] = "Dashboard";
 }
 
+<div class="sidebar">
+    <div class="logo"></div>
 
-<h1>Dashbard</h1>
+    <ul class="main-dash">
+        <li>
+            <a href="#">
+                <i class="fas fa-tachometer-alt"></i>
+                <span>Dashboard</span>
+            </a>
+        </li>
+    
+
+        <li>
+            <a href="#">
+                <i class="fas fa-user"></i>
+                <span>Profile</span>
+            </a>
+        </li>
+    
+
+        <li>
+            <a href="#">
+                <i class="fas fa-chart-bar"></i>
+                <span>Statistics</span>
+            </a>
+        </li>
+
+        <li>
+            <a href="#">
+                <i class="fas fa-briefcase"></i>
+                <span>Career</span>
+            </a>
+        </li>
+
+        <li>
+            <a href="#">
+                <i class="fas fa-question-circle"></i>
+                <span>FAQ</span>
+            </a>
+        </li>
+
+        <li>
+            <a href="#">
+                <i class="fas fa-star"></i>
+                <span>Testimonials</span>
+            </a>
+        </li>
+
+        <li>
+            <a href="#">
+                <i class="fas fa-cog"></i>
+                <span>Settings</span>
+            </a>
+        </li>
+    
+        <li>
+            <a href="#">
+                <i class="fas fa-sign-out-alt"></i>
+                <span>Logout</span>
+            </a>
+        </li>
+    </ul>
+</div> 
