--- a/TheGym/TheGym/wwwroot/css/site.css
+++ b/TheGym/TheGym/wwwroot/css/site.css
@@ -7,7 +7,10 @@
 *::after {
     padding: 0;
     margin: 0;
+    border: none;
+    outline: none;
     box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
 
 /* Setting base font-size and smooth scrolling for the entire page */
