The dashboard has a sidebar

--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -2,13 +2,13 @@
 @{
     ViewData["Title"] = "Dashboard";
 }
-
+<div class="dashboard">
 <div class="sidebar">
     <div class="logo"></div>
 
-    <ul class="main-dash">
+    <ul class="menu">
         <li>
-            <a href="#">
+            <a href="#" class="active">
                 <i class="fas fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </a>
@@ -17,7 +17,7 @@
 
         <li>
             <a href="#">
-                <i class="fas fa-user"></i>
+                 <i class="fas fa-user"></i>
                 <span>Profile</span>
             </a>
         </li>
@@ -66,3 +66,4 @@
         </li>
     </ul>
 </div> 
+</div>
