The Log in the button is fix

--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -7,8 +7,8 @@
     <div class="logo"></div>
 
     <ul class="menu">
-        <li>
-            <a href="#" class="active">
+        <li class="active">
+            <a href="#" >
                 <i class="fas fa-tachometer-alt"></i>
                 <span>Dashboard</span>
             </a>
@@ -58,12 +58,13 @@
             </a>
         </li>
     
-        <li>
+        <li class="logout">
             <a href="#">
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Logout</span>
             </a>
         </li>
+
     </ul>
 </div> 
 </div>
