--- a/TheGym/TheGym/Views/Home/Dashboard.cshtml
+++ b/TheGym/TheGym/Views/Home/Dashboard.cshtml
@@ -67,4 +67,42 @@
 
     </ul>
 </div> 
+
+    <!--Main Content-->
+    <div class="dash-main-content">
+        <div class="header-wrapper">
+            <div class="header-title">
+               <span>Primary</span>  
+               <h2>Dashboard</h2>
+            </div>
+
+            <!--Profile -->
+            <div class="user-info">
+                <div class="search-box">
+                    <i class="fa-solid fa-search"></i>
+                    <input type="text" placeholder="Search" />
+                </div>
+                <img src="~/images/img.jpeg"/>
+            </div>
+        </div>
+
+        <!-- 'User data'-->
+        <div class="card-container">
+            <h3 class="main-title">Data</h3>
+            <div class="card-wrapper">
+                <div class="payment-card">
+                    <div class="card-header">
+                        <div class="amount">
+                            <span class="title">Payment amount</span>
+                            <span class="amount-value">$400</span>
+                        </div>
+                        <i class="fas fa-dollar-sign icon"></i>
+                    </div>
+                    <span class="card-detail">***** ***** ***** 3486</span>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
